@@ -131,8 +131,9 @@
                 <version>3.8.0</version>
                 <configuration>
                     <verbose>false</verbose>
-                    <source>12</source>
-                    <target>12</target>
+                    <release>12</release>
+                    <!-- needed just for Java 12 switch expressions -->
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
                 <executions>
@@ -163,6 +164,10 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
+                <configuration>
+                    <!-- needed just for Java 12 switch expressions -->
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
