@@ -31,7 +31,7 @@ Java 9/10/11/12 migration:
   (see http://openjdk.java.net/jeps/272)
   - currently for Swing apps only
   - JavaFX support might be added after Java 10: https://bugs.openjdk.java.net/browse/JDK-8091107
-- migration to JDK 12 is done, language features (e.g. switch) can't be used before IDEA 2019.1
+- migration to JDK 12 is done, using new switch expression features
 
 SportsTracker packaging:
 - JDK 11 does not provide the javapackager tool aynmore, so packaging has been
